<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/aseicon"
            android:layout_width="102dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logoDescription"
            android:src="@drawable/ase_icon"
            app:srcCompat="@drawable/ase_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_general_margin"
            android:text="@string/logoText"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mailText"
            android:layout_width="317dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/usr_psw"
            android:ems="10"
            android:inputType="textEmailAddress" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout1"

        android:orientation="horizontal">

        <Button
            android:id="@+id/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="Log In"
            android:textSize="@dimen/textSize2"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/RegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="Sign Up"
            android:textSize="@dimen/textSize2"
            android:fontFamily="sans-serif-thin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_below="@id/linearlayout2"
        android:layout_marginTop="@dimen/activity_general_margin">

        <Button
            android:id="@+id/googleIcon"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/blue_text"
            android:fontFamily="serif"
            android:text="G"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="368dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="LOG IN WITH GOOGLE"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_below="@id/linearlayout3"
        android:layout_marginTop="@dimen/activity_general_margin">

        <Button
            android:id="@+id/linkdinIcon"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/blue_text"
            android:fontFamily="serif"
            android:text="IN"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/linkdinButton"
            android:layout_width="368dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="LOG IN WITH LINKEDIN"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize2" />

    </LinearLayout>

    <TextView
        android:id="@+id/OR_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout4"
        android:text="@string/or_text"
        android:textAlignment="center"
        android:textSize="@dimen/textSize2"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/OR_textview"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/emailimage"
            android:layout_width="84dp"
            android:layout_height="31dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/email_icon"
            android:layout_gravity="center"/>

        <EditText

            android:id="@+id/emailtxt"
            android:layout_width="368dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/usr_psw"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/linearlayout5"
        android:layout_marginTop="@dimen/activity_general_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pswimage"
            android:layout_width="83dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/psw_icon" />

        <EditText

            android:id="@+id/pswtxt"
            android:layout_width="368dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/usr_psw"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/psw_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout6"
        android:orientation="vertical">


        <Button
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_txt"
            android:background="@color/colorWhite"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_text"
            android:text="@string/loginButton"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize2"
            android:textStyle="bold" />
    </LinearLayout>




</RelativeLayout>